--- a/package/gluon-respondd/Makefile
+++ b/package/gluon-respondd/Makefile
@@ -28,8 +28,8 @@ endef
 define Package/gluon-respondd/install
 	$(CP) ./files/* $(1)/
 	$(CP) $(PKG_BUILD_DIR)/luadest/* $(1)/
-	$(INSTALL_DIR) $(1)/lib/gluon/respondd
-	$(CP) $(PKG_BUILD_DIR)/respondd.so $(1)/lib/gluon/respondd/respondd.so
+	$(INSTALL_DIR) $(1)/lib/respondd
+	$(CP) $(PKG_BUILD_DIR)/respondd.so $(1)/lib/respondd/respondd.so
 endef
 
 $(eval $(call BuildPackage,gluon-respondd))
